test/Fail/Issue1976-constraints2.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  _0 = B : Set (blocked on _0)

Issue1976-constraints2.agda:16.10-11: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  Issue1976-constraints2.agda:16.10-11
